kicad_oce_vis submodule added, it is STEP to Kicad-compatible VRML converter to convert Altium 3d models

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "kicad/altium2kicad"]
 	path = kicad/altium2kicad
 	url = https://github.com/thesourcerer8/altium2kicad.git
+[submodule "kicad_oce_vis"]
+	path = kicad_oce_vis
+	url = https://github.com/cbernardo/kicad_oce_vis.git
